samples/_failures_safe/1761637454_981f48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbee7b2d.c: In function ‘main’:
./samples/SAFE/__tmp_cbee7b2d.c:155:5: error: expected expression at end of input
  155 |     if (
      |     ^~
./samples/SAFE/__tmp_cbee7b2d.c:155:5: error: expected declaration or statement at end of input
